--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@sl-code-lords/movie-api": "1.0.0",
-    "@sl-code-lords/si-subdl": "1.1.1",
-    "@whiskeysockets/baileys": "7.0.0-rc.9",
+    "@sl-code-lords/movie-api": "^1.0.0",
+    "@sl-code-lords/si-subdl": "^1.1.1",
+    "@whiskeysockets/baileys": "^7.0.0-rc.8",
     "axios": "^1.13.2",
-    "buffer": "6.0.3",
+    "buffer": "^6.0.3",
     "express": "latest",
     "ffmpeg": "^0.0.4",
-    "fluent-ffmpeg": "2.1.28",
+    "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^11.1.0",
-    "jimp": "^0.16.13",
+    "jimp": "^1.6.0",
     "megajs": "^1.1.0",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "pino": "^10.1.0",
     "pm2": "^6.0.14",
-    "qrcode": "1.5.4",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
-    "stream": "0.0.3",
+    "stream": "^0.0.3",
     "util": "^0.12.5",
-    "vm": "^0.1.0",
+    "vm": "^0.1.0"
   }
 }
