--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.13.2",
     "crypto": "^4.2.0",
     "buffer": "^6.0.3",
-    "express": "latest",
+    "express": "^5.1.0",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^11.1.0",
@@ -26,7 +26,7 @@
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "pino": "^10.1.0",
-    "pm2": "^6.0.14",
+    "pm2": "^6.0.13",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "stream": "^0.0.3",
