--- a/package.json
+++ b/package.json
@@ -13,29 +13,24 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@sl-code-lords/movie-api": "^1.0.0",
     "@sl-code-lords/si-subdl": "^1.1.1",
-    "@vitalets/google-translate-api": "^9.2.1",
-    "acrcloud": "^1.4.0",
-    "audio-decode": "^2.2.3",
-    "axios": "^1.9.0",
-    "baileys": "7.0.0-rc.8",
-    "browser-id3-writer": "^6.2.0",
-    "cheerio": "^1.0.0",
-    "dotenv": "^16.5.0",
-    "eventsource": "^4.0.0",
-    "file-type": "^21.0.0",
-    "fluent-ffmpeg": "^2.1.3",
-    "google-tts-api": "^2.0.2",
-    "image-to-pdf": "^3.0.2",
-    "jimp": "0.16.0",
-    "node-cache": "^5.1.2",
-    "node-cron": "^4.1.1",
-    "node-webpmux": "^3.2.1",
-    "pg": "^8.16.0",
-    "pm2": "^6.0.8",
+    "@whiskeysockets/baileys": "^7.0.0-rc.8",
+    "axios": "^1.13.2",
+    "crypto": "^4.2.0",
+    "buffer": "^6.0.3",
+    "express": "^5.1.0",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "fs-extra": "^11.1.0",
+    "jimp": "^1.6.0",
+    "megajs": "^1.1.0",
+    "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
+    "pino": "^10.1.0",
+    "pm2": "^6.0.13",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
-    "sequelize": "^6.37.7",
-    "simple-git": "^3.27.0",
-    "sqlite3": "^5.1.7",
-    "youtube-sr": "^4.3.11"
+    "stream": "^0.0.3",
+    "util": "^0.12.5",
+    "vm": "^0.1.0"
   }
 }
